{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 457,
  "lineage": "c80ab762-cd5b-567e-7eba-d5e6a0be7359",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ba4e5f490eabb3f",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:elastic-ip/eipalloc-08ba4e5f490eabb3f",
            "domain": "vpc",
            "id": "eipalloc-08ba4e5f490eabb3f",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-135-11-165.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.135.11.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-nat-eip",
              "Project": "p-202603061651"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-nat-eip",
              "Project": "p-202603061651"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-08eb325b44b9cf2a9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08eb325b44b9cf2a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-018c0c87e77e81e9c",
            "private_dns": "ip-10-112-1-25.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.1.25",
            "public_dns": "ec2-18-135-5-63.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.5.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-bastion-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-bastion-root",
                  "Project": "p-202603061651"
                },
                "throughput": 125,
                "volume_id": "vol-01f0e660f1d1632eb",
                "volume_size": 16,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7a99328fa4c8c35",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-bastion",
              "Project": "p-202603061651",
              "Purpose": "SSH jump host",
              "Role": "bastion"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-bastion",
              "Project": "p-202603061651",
              "Purpose": "SSH jump host",
              "Role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05a7850f72345b889"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dfsp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fsp201",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-068de0e1fefcf9228",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-068de0e1fefcf9228",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-098fb91b0f46cc93c",
            "private_dns": "ip-10-112-2-222.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp201-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp201-root",
                  "Project": "p-202603061651"
                },
                "throughput": 500,
                "volume_id": "vol-0073310cf8ec03996",
                "volume_size": 128,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp201",
              "NodeNumber": "101",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp201",
              "NodeNumber": "101",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "fsp202",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-089898425cd15c20e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089898425cd15c20e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00b3d4d27d0bdc53c",
            "private_dns": "ip-10-112-2-57.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp202-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp202-root",
                  "Project": "p-202603061651"
                },
                "throughput": 500,
                "volume_id": "vol-0b94941880dd45e65",
                "volume_size": 128,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp202",
              "NodeNumber": "102",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp202",
              "NodeNumber": "102",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "fsp203",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-0a058a9eabe157327",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a058a9eabe157327",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0beb854da757ca688",
            "private_dns": "ip-10-112-2-134.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp203-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp203-root",
                  "Project": "p-202603061651"
                },
                "throughput": 500,
                "volume_id": "vol-0bf9770d39cd1889b",
                "volume_size": 128,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp203",
              "NodeNumber": "103",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp203",
              "NodeNumber": "103",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "fsp204",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-0fe0c289bbdf88e6a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe0c289bbdf88e6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0917f93a70b75ceaa",
            "private_dns": "ip-10-112-2-185.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp204-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp204-root",
                  "Project": "p-202603061651"
                },
                "throughput": 500,
                "volume_id": "vol-069958f9abe9371c2",
                "volume_size": 128,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp204",
              "NodeNumber": "104",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp204",
              "NodeNumber": "104",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "fsp205",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-08dc8ed35e0d5fe8d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08dc8ed35e0d5fe8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a7eb274db75cc232",
            "private_dns": "ip-10-112-2-92.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp205-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp205-root",
                  "Project": "p-202603061651"
                },
                "throughput": 500,
                "volume_id": "vol-047d4243e4aeea892",
                "volume_size": 128,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp205",
              "NodeNumber": "105",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp205",
              "NodeNumber": "105",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "fsp206",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-0b74098dc5cd699f5",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b74098dc5cd699f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f97dade9065e49c",
            "private_dns": "ip-10-112-2-160.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp206-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp206-root",
                  "Project": "p-202603061651"
                },
                "throughput": 500,
                "volume_id": "vol-03153a1c336d40323",
                "volume_size": 128,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp206",
              "NodeNumber": "106",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp206",
              "NodeNumber": "106",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "fsp207",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-0d2e7e15209b9f87e",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2e7e15209b9f87e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05b2ee8c7276905e4",
            "private_dns": "ip-10-112-2-116.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp207-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp207-root",
                  "Project": "p-202603061651"
                },
                "throughput": 500,
                "volume_id": "vol-033f5d7f43cd4ef74",
                "volume_size": 128,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp207",
              "NodeNumber": "107",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp207",
              "NodeNumber": "107",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "fsp208",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-053ad36fc419fdddf",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053ad36fc419fdddf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0542ce72bc4689ac5",
            "private_dns": "ip-10-112-2-15.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp208-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-fsp208-root",
                  "Project": "p-202603061651"
                },
                "throughput": 500,
                "volume_id": "vol-0f6f3fadd12d72f1e",
                "volume_size": 128,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp208",
              "NodeNumber": "108",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-fsp208",
              "NodeNumber": "108",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "k6",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-0c4d19aa28b2bcd40",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4d19aa28b2bcd40",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bada2a2ef926d091",
            "private_dns": "ip-10-112-2-129.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-k6-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-k6-root",
                  "Project": "p-202603061651"
                },
                "throughput": 500,
                "volume_id": "vol-05d4bdbe3e1ed1db9",
                "volume_size": 128,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-k6",
              "NodeNumber": "109",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-k6",
              "NodeNumber": "109",
              "Project": "p-202603061651",
              "Role": "ml-dfsp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "switch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sw1-kafka-ctrl-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-0c0bd218ec2a953ed",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0bd218ec2a953ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-043f75a211be81012",
            "private_dns": "ip-10-112-2-65.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-kafka-ctrl-1-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-kafka-ctrl-1-root",
                  "Project": "p-202603061651"
                },
                "throughput": 0,
                "volume_id": "vol-0f7d2999f02cf7ca8",
                "volume_size": 500,
                "volume_type": "io2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-kafka-ctrl-1",
              "Project": "p-202603061651",
              "Role": "ml-sw-kafka",
              "Service": "kafka"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-kafka-ctrl-1",
              "Project": "p-202603061651",
              "Role": "ml-sw-kafka",
              "Service": "kafka"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "sw1-kafka-n1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-0ae4f8005b3500c32",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae4f8005b3500c32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c9cb5929ace39e6d",
            "private_dns": "ip-10-112-2-7.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-kafka-n1-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-kafka-n1-root",
                  "Project": "p-202603061651"
                },
                "throughput": 0,
                "volume_id": "vol-024212e2c3d358d58",
                "volume_size": 500,
                "volume_type": "io2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-kafka-n1",
              "Project": "p-202603061651",
              "Role": "ml-sw-kafka",
              "Service": "kafka"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-kafka-n1",
              "Project": "p-202603061651",
              "Role": "ml-sw-kafka",
              "Service": "kafka"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "sw1-kafka-n2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-08cc8accff20e53af",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08cc8accff20e53af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064a4915c90e79674",
            "private_dns": "ip-10-112-2-189.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-kafka-n2-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-kafka-n2-root",
                  "Project": "p-202603061651"
                },
                "throughput": 0,
                "volume_id": "vol-0e336481cffcc21ad",
                "volume_size": 500,
                "volume_type": "io2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-kafka-n2",
              "Project": "p-202603061651",
              "Role": "ml-sw-kafka",
              "Service": "kafka"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-kafka-n2",
              "Project": "p-202603061651",
              "Role": "ml-sw-kafka",
              "Service": "kafka"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "sw1-kafka-n3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-0397e512910a52d5d",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0397e512910a52d5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ea7903049e489196",
            "private_dns": "ip-10-112-2-236.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-kafka-n3-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-kafka-n3-root",
                  "Project": "p-202603061651"
                },
                "throughput": 0,
                "volume_id": "vol-04d53aa4285e63f5d",
                "volume_size": 500,
                "volume_type": "io2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-kafka-n3",
              "Project": "p-202603061651",
              "Role": "ml-sw-kafka",
              "Service": "kafka"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-kafka-n3",
              "Project": "p-202603061651",
              "Role": "ml-sw-kafka",
              "Service": "kafka"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "sw1-monitoring",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-08ddf18a24b0b1374",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ddf18a24b0b1374",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0515e4081aa0e0598",
            "private_dns": "ip-10-112-2-23.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-monitoring-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-monitoring-root",
                  "Project": "p-202603061651"
                },
                "throughput": 750,
                "volume_id": "vol-085d0b928f714487d",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-monitoring",
              "Project": "p-202603061651",
              "Role": "ml-sw-monitoring",
              "Service": "monitoring"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-monitoring",
              "Project": "p-202603061651",
              "Role": "ml-sw-monitoring",
              "Service": "monitoring"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "sw1-mysql",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-02a5e7ba88d73b6fc",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a5e7ba88d73b6fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05a0ceb90fa696c3f",
            "private_dns": "ip-10-112-2-102.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-mysql-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-mysql-root",
                  "Project": "p-202603061651"
                },
                "throughput": 0,
                "volume_id": "vol-006463f85790f6cde",
                "volume_size": 200,
                "volume_type": "io2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-mysql",
              "Project": "p-202603061651",
              "Role": "ml-sw-mysql",
              "Service": "mysql"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-mysql",
              "Project": "p-202603061651",
              "Role": "ml-sw-mysql",
              "Service": "mysql"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "sw1-n1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-009eb70a522b15893",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009eb70a522b15893",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0450e4dae88e42295",
            "private_dns": "ip-10-112-2-166.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-n1-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-n1-root",
                  "Project": "p-202603061651"
                },
                "throughput": 1000,
                "volume_id": "vol-004db91dc775dae45",
                "volume_size": 128,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-n1",
              "NodeNumber": "1",
              "Project": "p-202603061651",
              "Role": "ml-sw-generic"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-n1",
              "NodeNumber": "1",
              "Project": "p-202603061651",
              "Role": "ml-sw-generic"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "sw1-n2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-035cd05f99a017223",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035cd05f99a017223",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02897679375221a06",
            "private_dns": "ip-10-112-2-191.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-n2-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-n2-root",
                  "Project": "p-202603061651"
                },
                "throughput": 1000,
                "volume_id": "vol-0d532ba01e87cc229",
                "volume_size": 128,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-n2",
              "NodeNumber": "2",
              "Project": "p-202603061651",
              "Role": "ml-sw-generic"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-n2",
              "NodeNumber": "2",
              "Project": "p-202603061651",
              "Role": "ml-sw-generic"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "sw1-n3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-044415bb13eee2391",
            "arn": "arn:aws:ec2:eu-west-2:886403637725:instance/i-0adb2f908a44d5aab",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 8,
            "cpu_options": [
              {
                "core_count": 8,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0adb2f908a44d5aab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7i.4xlarge",
            "ipv6_address_count": 0,
            "key_name": "ndelma-gtm-202504091000",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_group": "p-202603061651-cluster-pg",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01791e4cce17f29a4",
            "private_dns": "ip-10-112-2-41.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.112.2.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 10000,
                "kms_key_id": "arn:aws:kms:eu-west-2:886403637725:key/b22ce7a5-0dd6-47d8-b624-314db3e7f934",
                "tags": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-n3-root",
                  "Project": "p-202603061651"
                },
                "tags_all": {
                  "CreatedAt": "2026-04-30T11:33:14Z",
                  "Environment": "perf-test",
                  "ManagedBy": "Terraform",
                  "Name": "p-202603061651-sw1-n3-root",
                  "Project": "p-202603061651"
                },
                "throughput": 1000,
                "volume_id": "vol-0e7274735404fa546",
                "volume_size": 128,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f11d2b15dab58cc0",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-n3",
              "NodeNumber": "3",
              "Project": "p-202603061651",
              "Role": "ml-sw-generic"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-sw1-n3",
              "NodeNumber": "3",
              "Project": "p-202603061651",
              "Role": "ml-sw-generic"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04de874c6c25d6ef1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:886403637725:internet-gateway/igw-074c2572757430b02",
            "id": "igw-074c2572757430b02",
            "owner_id": "886403637725",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-igw",
              "Project": "p-202603061651"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-igw",
              "Project": "p-202603061651"
            },
            "vpc_id": "vpc-0fc7811d471daa9a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "switch_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:loadbalancer/net/p-202603061651-switch-nlb/8d3362f8ec3979a3",
            "arn_suffix": "net/p-202603061651-switch-nlb/8d3362f8ec3979a3",
            "dns_name": "p-202603061651-switch-nlb-8d3362f8ec3979a3.elb.eu-west-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:loadbalancer/net/p-202603061651-switch-nlb/8d3362f8ec3979a3",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "p-202603061651-switch-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0f11d2b15dab58cc0"
              }
            ],
            "subnets": [
              "subnet-0f11d2b15dab58cc0"
            ],
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-switch-nlb",
              "Project": "p-202603061651",
              "Purpose": "Mojaloop TCP load balancing"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-switch-nlb",
              "Project": "p-202603061651",
              "Purpose": "Mojaloop TCP load balancing"
            },
            "vpc_id": "vpc-0fc7811d471daa9a9",
            "zone_id": "ZD4D7Y8KGAS4G"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "switch_tcp_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:listener/net/p-202603061651-switch-nlb/8d3362f8ec3979a3/4da0a3390fe63b56",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-443/bfd4758d9e3a5372",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:listener/net/p-202603061651-switch-nlb/8d3362f8ec3979a3/4da0a3390fe63b56",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:loadbalancer/net/p-202603061651-switch-nlb/8d3362f8ec3979a3",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Project": "p-202603061651"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.switch_nlb",
            "aws_lb_target_group.switch_tcp_443",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "switch_tcp_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:listener/net/p-202603061651-switch-nlb/8d3362f8ec3979a3/5164519cfeeba7ac",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-80/7724fed64c25b45e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:listener/net/p-202603061651-switch-nlb/8d3362f8ec3979a3/5164519cfeeba7ac",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:loadbalancer/net/p-202603061651-switch-nlb/8d3362f8ec3979a3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Project": "p-202603061651"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.switch_nlb",
            "aws_lb_target_group.switch_tcp_80",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "switch_tcp_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-443/bfd4758d9e3a5372",
            "arn_suffix": "targetgroup/p-202603061651-tcp-443/bfd4758d9e3a5372",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "30080",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-443/bfd4758d9e3a5372",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "p-202603061651-tcp-443",
            "port": 30443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-tcp-443-tg",
              "Project": "p-202603061651"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-tcp-443-tg",
              "Project": "p-202603061651"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fc7811d471daa9a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "switch_tcp_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-80/7724fed64c25b45e",
            "arn_suffix": "targetgroup/p-202603061651-tcp-80/7724fed64c25b45e",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "30080",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-80/7724fed64c25b45e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "p-202603061651-tcp-80",
            "port": 30080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-tcp-80-tg",
              "Project": "p-202603061651"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-tcp-80-tg",
              "Project": "p-202603061651"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fc7811d471daa9a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "switch_tcp_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sw1-n1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-443/bfd4758d9e3a5372-2026043011341447770000001b",
            "port": 30443,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-443/bfd4758d9e3a5372",
            "target_id": "i-009eb70a522b15893"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.switch",
            "aws_lb_target_group.switch_tcp_443",
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "sw1-n2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-443/bfd4758d9e3a5372-20260430113414245900000017",
            "port": 30443,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-443/bfd4758d9e3a5372",
            "target_id": "i-035cd05f99a017223"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.switch",
            "aws_lb_target_group.switch_tcp_443",
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "sw1-n3",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-443/bfd4758d9e3a5372-20260430113414258000000018",
            "port": 30443,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-443/bfd4758d9e3a5372",
            "target_id": "i-0adb2f908a44d5aab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.switch",
            "aws_lb_target_group.switch_tcp_443",
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "switch_tcp_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sw1-n1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-80/7724fed64c25b45e-20260430113414242500000016",
            "port": 30080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-80/7724fed64c25b45e",
            "target_id": "i-009eb70a522b15893"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.switch",
            "aws_lb_target_group.switch_tcp_80",
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "sw1-n2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-80/7724fed64c25b45e-20260430113414282200000019",
            "port": 30080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-80/7724fed64c25b45e",
            "target_id": "i-035cd05f99a017223"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.switch",
            "aws_lb_target_group.switch_tcp_80",
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        },
        {
          "index_key": "sw1-n3",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-80/7724fed64c25b45e-2026043011341431150000001a",
            "port": 30080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:886403637725:targetgroup/p-202603061651-tcp-80/7724fed64c25b45e",
            "target_id": "i-0adb2f908a44d5aab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.switch",
            "aws_lb_target_group.switch_tcp_80",
            "aws_placement_group.cluster",
            "aws_security_group.internal",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_key_pair.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ba4e5f490eabb3f",
            "association_id": "eipassoc-0c6d87c1a869b7491",
            "connectivity_type": "public",
            "id": "nat-03e97a048f3311a14",
            "network_interface_id": "eni-0943d3347c03fa6bd",
            "private_ip": "10.112.1.112",
            "public_ip": "13.135.11.165",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d7a99328fa4c8c35",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-nat",
              "Project": "p-202603061651"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-nat",
              "Project": "p-202603061651"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:886403637725:route-table/rtb-098cb0c964f2983f8",
            "id": "rtb-098cb0c964f2983f8",
            "owner_id": "886403637725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03e97a048f3311a14",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-private-rtb",
              "Project": "p-202603061651"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-private-rtb",
              "Project": "p-202603061651"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc7811d471daa9a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:886403637725:route-table/rtb-0bfa63aeeb22c8378",
            "id": "rtb-0bfa63aeeb22c8378",
            "owner_id": "886403637725",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074c2572757430b02",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-public-rtb",
              "Project": "p-202603061651"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-public-rtb",
              "Project": "p-202603061651"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc7811d471daa9a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09703eea81a675cc6",
            "route_table_id": "rtb-098cb0c964f2983f8",
            "subnet_id": "subnet-0f11d2b15dab58cc0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd8a55b42d551b81",
            "route_table_id": "rtb-0bfa63aeeb22c8378",
            "subnet_id": "subnet-0d7a99328fa4c8c35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:886403637725:security-group/sg-05a7850f72345b889",
            "description": "Security group for bastion host",
            "egress": [],
            "id": "sg-05a7850f72345b889",
            "ingress": [],
            "name": "p-202603061651-bastion-sg",
            "name_prefix": "",
            "owner_id": "886403637725",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-bastion-sg",
              "Project": "p-202603061651",
              "Purpose": "Bastion SSH access"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-bastion-sg",
              "Project": "p-202603061651",
              "Purpose": "Bastion SSH access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc7811d471daa9a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:886403637725:security-group/sg-04de874c6c25d6ef1",
            "description": "Security group for internal cluster nodes",
            "egress": [],
            "id": "sg-04de874c6c25d6ef1",
            "ingress": [],
            "name": "p-202603061651-internal-sg",
            "name_prefix": "",
            "owner_id": "886403637725",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-internal-sg",
              "Project": "p-202603061651",
              "Purpose": "Internal cluster communication"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-internal-sg",
              "Project": "p-202603061651",
              "Purpose": "Internal cluster communication"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc7811d471daa9a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound internet traffic",
            "from_port": 0,
            "id": "sgrule-3244224533",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05a7850f72345b889",
            "security_group_rule_id": "sgr-0af60076990aac805",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH access to bastion",
            "from_port": 22,
            "id": "sgrule-4288525556",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05a7850f72345b889",
            "security_group_rule_id": "sgr-0d0700373914beb75",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound internet traffic (for package downloads, updates, etc.)",
            "from_port": 0,
            "id": "sgrule-1217571018",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04de874c6c25d6ef1",
            "security_group_rule_id": "sgr-03b0fb8f2212bb95d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.internal",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal_from_vpc_for_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.112.0.0/16"
            ],
            "description": "NodePort range from NLB (preserves source IP)",
            "from_port": 30000,
            "id": "sgrule-2420288866",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04de874c6c25d6ef1",
            "security_group_rule_id": "sgr-04a8bff7108e93d2d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.internal",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH from bastion",
            "from_port": 22,
            "id": "sgrule-1192674623",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04de874c6c25d6ef1",
            "security_group_rule_id": "sgr-070fe091b21e0b592",
            "self": false,
            "source_security_group_id": "sg-05a7850f72345b889",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.internal",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "MicroK8s API server from bastion",
            "from_port": 16443,
            "id": "sgrule-2803419200",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04de874c6c25d6ef1",
            "security_group_rule_id": "sgr-009be343fc2f5aa4a",
            "self": false,
            "source_security_group_id": "sg-05a7850f72345b889",
            "timeouts": null,
            "to_port": 16443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.internal",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "MicroK8s API server",
            "from_port": 16443,
            "id": "sgrule-4045343451",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04de874c6c25d6ef1",
            "security_group_rule_id": "sgr-0e808c329cc040f4f",
            "self": false,
            "source_security_group_id": "sg-04de874c6c25d6ef1",
            "timeouts": null,
            "to_port": 16443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.internal",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "MicroK8s clustering",
            "from_port": 25000,
            "id": "sgrule-2970555348",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04de874c6c25d6ef1",
            "security_group_rule_id": "sgr-06c84dde9213d4889",
            "self": false,
            "source_security_group_id": "sg-04de874c6c25d6ef1",
            "timeouts": null,
            "to_port": 25000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.internal",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "VXLAN for pod networking",
            "from_port": 4789,
            "id": "sgrule-3926930618",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-04de874c6c25d6ef1",
            "security_group_rule_id": "sgr-02c2055624707cd17",
            "self": false,
            "source_security_group_id": "sg-04de874c6c25d6ef1",
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.internal",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "5",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Calico BGP",
            "from_port": 179,
            "id": "sgrule-3407481814",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04de874c6c25d6ef1",
            "security_group_rule_id": "sgr-09e3ba82f51e1a4d1",
            "self": false,
            "source_security_group_id": "sg-04de874c6c25d6ef1",
            "timeouts": null,
            "to_port": 179,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.internal",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "6",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "etcd",
            "from_port": 12379,
            "id": "sgrule-2986204365",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04de874c6c25d6ef1",
            "security_group_rule_id": "sgr-0710c9dfa77333670",
            "self": false,
            "source_security_group_id": "sg-04de874c6c25d6ef1",
            "timeouts": null,
            "to_port": 12379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.internal",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "7",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "NodePort range",
            "from_port": 30000,
            "id": "sgrule-3624171624",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04de874c6c25d6ef1",
            "security_group_rule_id": "sgr-043b98c271aaf0e74",
            "self": false,
            "source_security_group_id": "sg-05a7850f72345b889",
            "timeouts": null,
            "to_port": 30000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.internal",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "8",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "All internal cluster traffic",
            "from_port": 0,
            "id": "sgrule-3142446711",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04de874c6c25d6ef1",
            "security_group_rule_id": "sgr-0aa8b4a9870a3eddb",
            "self": false,
            "source_security_group_id": "sg-04de874c6c25d6ef1",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.internal",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:886403637725:subnet/subnet-0f11d2b15dab58cc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.112.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f11d2b15dab58cc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886403637725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-private-subnet",
              "Project": "p-202603061651",
              "Type": "private"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-private-subnet",
              "Project": "p-202603061651",
              "Type": "private"
            },
            "vpc_id": "vpc-0fc7811d471daa9a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:886403637725:subnet/subnet-0d7a99328fa4c8c35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.112.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7a99328fa4c8c35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "886403637725",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-public-subnet",
              "Project": "p-202603061651",
              "Type": "public"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-public-subnet",
              "Project": "p-202603061651",
              "Type": "public"
            },
            "vpc_id": "vpc-0fc7811d471daa9a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:886403637725:vpc/vpc-0fc7811d471daa9a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.112.0.0/16",
            "default_network_acl_id": "acl-064ae6275a1d1da54",
            "default_route_table_id": "rtb-02547e075c67fc5de",
            "default_security_group_id": "sg-0fb2e274f9628c997",
            "dhcp_options_id": "dopt-98cf35f1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc7811d471daa9a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02547e075c67fc5de",
            "owner_id": "886403637725",
            "tags": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-vpc",
              "Project": "p-202603061651"
            },
            "tags_all": {
              "CreatedAt": "2026-04-30T11:33:14Z",
              "Environment": "perf-test",
              "ManagedBy": "Terraform",
              "Name": "p-202603061651-vpc",
              "Project": "p-202603061651"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}